2009-08-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revision-contributors): make REVISION
	optional, to allow for fething contributors for a checked out
	revision.
	(vc-clearcase-state-heuristic): if the latest version was merged
	into the current checkedout one, mark the file as 'edited

2009-08-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-register): 437 support registering
	multiple files.  Also use the COMMENT parameter if passed in.
	(vc-clearcase-state, vc-clearcase-state-heuristic): return
	'unregistered when file is not registered with ClearCase

2009-07-20  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-annotate-warp-revisionm)
	(vc-annotate-extract-revision-at-line): declare function to
	prevent compiler warning
	(vc-clearcase-annotate-contributor)
	(vc-clearcase-annotate-contributor-to-line)
	(vc-clearcase-annotate-latest-on-branch): declare
	`vc-annotate-parent-file', `vc-annotate-parent-rev' as special.

2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
	short-circuit was preventing `accept-process-output' being called.

2009-07-10  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-annotate-contributor)
	(vc-clearcase-annotate-contributor-to-line)
	(vc-clearcase-annotate-latest-on-branch): new functions
	(vc-clearcase-patch-annotate-mode): new function, called after
	vc-annotate is loaded.

2009-05-19  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-read-view-tag): fix let binding

2009-02-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-modify-change-comment): fix format
	string.
	(vc-clearcase-print-log): use `vc-setup-buffer' to prepare the log
	buffer.

2009-02-16  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-file-optimize-revisions): don't merge