@@ -1,3 +1,8 @@
+2009-09-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-diff-with-diff): don't make FILE
+	relative to the current directory when passing it to diff.
+
 2009-08-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-revision-contributors): make REVISION
